// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CookieContent /> should render correctly with 0 cookies type 1`] = `
<div>
  <div>
    <FormattedHTMLMessage
      id="cookies-page-texte-part1"
      values={
        Object {
          "platformLink": "http://test.com",
        }
      }
    />
  </div>
  <FormattedHTMLMessage
    id="cookies-page-texte-part1-2"
    values={
      Object {
        "platformLink": "http://test.com",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-tmp-part1-3"
    values={
      Object {
        "nbCookies": 0,
        "platformLink": "http://test.com",
      }
    }
  />
  <div
    className="content"
    dangerouslySetInnerHTML={
      Object {
        "__html": "cookiecontent",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-part2"
    values={
      Object {
        "platformLink": "http://test.com",
      }
    }
  />
</div>
`;

exports[`<CookieContent /> should render correctly with 1 cookie type 1`] = `
<div>
  <div>
    <FormattedHTMLMessage
      id="cookies-page-texte-tmp-part1"
      values={
        Object {
          "cookieType": 2,
          "platformLink": "http://test.com",
        }
      }
    />
  </div>
  <FormattedHTMLMessage
    id="cookies-page-texte-part1-2"
    values={
      Object {
        "platformLink": "http://test.com",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-tmp-part1-3"
    values={
      Object {
        "nbCookies": 1,
        "platformLink": "http://test.com",
      }
    }
  />
  <div
    className="content"
    dangerouslySetInnerHTML={
      Object {
        "__html": "cookiecontent",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-part2"
    values={
      Object {
        "platformLink": "http://test.com",
      }
    }
  />
</div>
`;

exports[`<CookieContent /> should render correctly with 1 cookies type 1`] = `
<div>
  <div>
    <FormattedHTMLMessage
      id="cookies-page-texte-tmp-part1"
      values={
        Object {
          "cookieType": 2,
          "platformLink": "http://test.com",
        }
      }
    />
  </div>
  <FormattedHTMLMessage
    id="cookies-page-texte-part1-2"
    values={
      Object {
        "platformLink": "http://test.com",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-tmp-part1-3"
    values={
      Object {
        "nbCookies": 1,
        "platformLink": "http://test.com",
      }
    }
  />
  <div
    className="content"
    dangerouslySetInnerHTML={
      Object {
        "__html": "cookiecontent",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-part2"
    values={
      Object {
        "platformLink": "http://test.com",
      }
    }
  />
</div>
`;

exports[`<CookieContent /> should render correctly with 2 cookies type 1`] = `
<div>
  <div>
    <FormattedHTMLMessage
      id="cookies-page-texte-tmp-part1"
      values={
        Object {
          "cookieType": 3,
          "platformLink": "http://test.com",
        }
      }
    />
  </div>
  <FormattedHTMLMessage
    id="cookies-page-texte-part1-2"
    values={
      Object {
        "platformLink": "http://test.com",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-tmp-part1-3"
    values={
      Object {
        "nbCookies": 2,
        "platformLink": "http://test.com",
      }
    }
  />
  <div
    className="content"
    dangerouslySetInnerHTML={
      Object {
        "__html": "cookiecontent",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-part2"
    values={
      Object {
        "platformLink": "http://test.com",
      }
    }
  />
</div>
`;
